# IntervalAI

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: .gitignore  fact2.c  loopinbranch.c  min2.c  min3.c  sum.c  sum_fact.c  widen.c
include/: arg_parser.h  display_utils.h  expr_handler.h  func_handler.h  instruction_handler.h  interval_domain.h  io_utils.h
scripts/: verify_c_program.sh
src/: arg_parser.cpp  display_utils.cpp  expr_handler.cpp  func_handler.cpp  instruction_handler.cpp  interval_domain.cpp  intervalai_main.cpp  io_utils.cpp  main.cpp
